crates/baton-tui/src/snapshots/baton_tui__tests_pipeline__pipeline_completed_100.snap
---
source: crates/baton-tui/src/tests_pipeline.rs
expression: "screen(&app, 100, 30)"
---
╭─ ◇ Pipeline · instalar ─────────────────────────────────────────── [backup ok] [rollback listo] ─╮
│ 8 de 8 pasos                                                                            00:06:12 │
│ ✓━━━━━✓━━━━━✓━━━━━✓━━━━━◆━━━━━✓━━━━━◆━━━━━◆━━━━━»                                                │
│ 1     2     3     4     5     6     g     7     8                                                │
│ local ──────┘     prod-db     prod-app ─────────┘                                                │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ ▸ local                                                                                          │
│  ✓ Pre-checks ····························································· check             4s │
│  │                                                                                               │
│  ✓ Backup volúmenes ······················································· backup           38s │
│  │                                                                                               │
│  ✓ Build imágenes ························································· dockerfile     1m52s │
│  ╵                                                                                               │
│ ▸ prod-db                                                                                        │
│  ✓ Levantar DB ···························································· compose          44s │
│  │                                                                                               │
│  ◆ Gate: healthcheck · auto · todos pasan · 60s · 1 check ··································· ok │
│  ╵                                                                                               │
│ ▸ prod-app                                                                                       │
│  ✓ Levantar servicios ····················································· compose     ↻1 2m31s │
│  ◆ gate auto por servicio · todos pasan · 60s · 4 checks ······················ con advertencias │
│  │                                                                                               │
│  ◆ Gate: confirmar despliegue · manual · ¿Continuar con el despliegue? ······················ ok │
│  │                                                                                               │
│ ›» Smoke tests ···························································· check        omitido │
│  ╵                                                                                               │
│                                                                                                  │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ [↑↓] nodo  [espacio] abrir gate  [v] resumen  [q] salir                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
