crates/baton-tui/src/snapshots/baton_tui__tests_pipeline__pipeline_failed_100.snap
---
source: crates/baton-tui/src/tests_pipeline.rs
expression: "screen(&app, 100, 30)"
---
╭─ ◇ Pipeline · instalar ─────────────────────────────────────────── [backup ok] [rollback listo] ─╮
│ Paso 6 de 7 · Levantar servicios                                                        00:04:07 │
│ ✓━━━━━✓━━━━━✓━━━━━✓━━━━━◆━━━━━✗━━━━━◆━━━━━○                                                      │
│ 1     2     3     4     5     6     g     7                                                      │
│ local ──────┘     prod-db     prod-app ───┘                                                      │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ ▸ local                                                                                          │
│  ✓ Pre-checks ····························································· check             4s │
│  │                                                                                               │
│  ✓ Backup volúmenes ······················································· backup           38s │
│  │                                                                                               │
│  ✓ Build imágenes ························································· dockerfile     1m52s │
│  ╵                                                                                               │
│ ▸ prod-db                                                                                        │
│  ✓ Levantar DB ···························································· compose          44s │
│  │                                                                                               │
│  ◆ Gate: healthcheck · auto · todos pasan · 60s · 1 check ··································· ok │
│  ╵                                                                                               │
│ ▸ prod-app                                                                                       │
│ ›✗ Levantar servicios ····················································· compose        falló │
│  │  ✗ El servidor rechazó la autenticación                                                       │
│  ◆ gate auto por servicio · todos pasan · 60s · 4 checks ····················· no llegó a correr │
│  │                                                                                               │
│  ○ Smoke tests ···························································· check                │
│  ╵                                                                                               │
│                                                                                                  │
│                                                                                                  │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ [↑↓] nodo  [espacio] abrir gate  [v] menú de fallo                                               │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
