crates/baton-tui/src/snapshots/baton_tui__tests_pipeline__pipeline_gate_open_100.snap
---
source: crates/baton-tui/src/tests_pipeline.rs
expression: "screen(&app, 100, 30)"
---
╭─ ◇ Pipeline · instalar ──────────────────────────────────────────────────────────────────────────╮
│ 8 pasos · 3 gates · 3 destinos                                                                   │
│ ○━━━━━○━━━━━○━━━━━○━━━━━◆━━━━━○━━━━━◆━━━━━◆━━━━━○                                                │
│ 1     2     3     4     5     6     g     7     8                                                │
│ local ──────┘     prod-db     prod-app ─────────┘                                                │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ ▸ local                                                                                          │
│  ○ Pre-checks ····························································· check                │
│  │                                                                                               │
│  ○ Backup volúmenes ······················································· backup               │
│  │                                                                                               │
│  ○ Build imágenes ························································· dockerfile           │
│  ╵                                                                                               │
│ ▸ prod-db                                                                                        │
│  ○ Levantar DB ···························································· compose              │
│  │                                                                                               │
│  ◆ Gate: healthcheck · auto · todos pasan · 60s · 1 check ···························· pendiente │
│  ╵                                                                                               │
│ ▸ prod-app                                                                                       │
│  ○ Levantar servicios ····················································· compose              │
│ ›◆ gate auto por servicio · todos pasan · 60s ········································ pendiente │
│  │  ○ api ★      healthcheck definido en compose                                                 │
│  │  ○ web        http        :3000/health                                                        │
│  │  ○ worker     running     contenedor arriba 30s                                               │
│  │  + notifier   http        nuevo, sin activar                                                  │
│  │                                                                                               │
│                                                                                        ↓ 4 abajo │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ [↑↓] nodo  [espacio] abrir gate  [v] volver                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
