crates/baton-tui/src/snapshots/baton_tui__tests_pipeline__pipeline_preview_80.snap
---
source: crates/baton-tui/src/tests_pipeline.rs
expression: "screen(&app, 80, 24)"
---
╭─ ◇ Pipeline · instalar ──────────────────────────────────────────────────────╮
│ 8 pasos · 3 gates · 3 destinos                                               │
│ ○━━━━━○━━━━━○━━━━━○━━━━━◆━━━━━○━━━━━◆━━━━━◆━━━━━○                            │
│ 1     2     3     4     5     6     g     7     8                            │
│ local ──────┘     prod-db     prod-app ─────────┘                            │
├──────────────────────────────────────────────────────────────────────────────┤
│ ▸ local                                                                      │
│ ›○ Pre-checks ········································· check                │
│  │                                                                           │
│  ○ Backup volúmenes ··································· backup               │
│  │                                                                           │
│  ○ Build imágenes ····································· dockerfile           │
│  ╵                                                                           │
│ ▸ prod-db                                                                    │
│  ○ Levantar DB ········································ compose              │
│  │                                                                           │
│  ◆ Gate: healthcheck · auto · todos pasan · 60s · 1 check ········ pendiente │
│  ╵                                                                           │
│ ▸ prod-app                                                                   │
│  ○ Levantar servicios ································· compose              │
│                                                                    ↓ 6 abajo │
├──────────────────────────────────────────────────────────────────────────────┤
│ [↑↓] nodo  [espacio] abrir gate  [v] volver                                  │
╰──────────────────────────────────────────────────────────────────────────────╯
