crates/baton-tui/src/snapshots/baton_tui__tests_pipeline__pipeline_running_100.snap
---
source: crates/baton-tui/src/tests_pipeline.rs
expression: "screen(&app, 100, 30)"
---
╭─ ◇ Pipeline · instalar ─────────────────────────────────────────── [backup ok] [rollback listo] ─╮
│ Paso 4 de 7 · Levantar DB                                                               00:02:41 │
│ ✓━━━━━✓━━━━━✓━━━━━◐━━━━━◆━━━━━○━━━━━◆━━━━━○                                                      │
│ 1     2     3     4     5     6     g     7                                                      │
│ local ──────┘     prod-db     prod-app ───┘                                                      │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ ▸ local                                                                                          │
│  ✓ Pre-checks ····························································· check             4s │
│  │                                                                                               │
│  ✓ Backup volúmenes ······················································· backup           38s │
│  │                                                                                               │
│  ✓ Build imágenes ························································· dockerfile     1m52s │
│  ╵                                                                                               │
│ ▸ prod-db                                                                                        │
│  ◐ Levantar DB ···························································· compose     en curso │
│  │                                                                                               │
│ ›◆ Gate: healthcheck · auto · todos pasan · 60s ···································· intento 3/6 │
│  │  ◐ pg_isready   command     intento 3/6                                                       │
│  ╵                                                                                               │
│ ▸ prod-app                                                                                       │
│  ○ Levantar servicios ····················································· compose              │
│  ◆ gate auto por servicio · todos pasan · 60s · 4 checks ····························· pendiente │
│  │                                                                                               │
│  ○ Smoke tests ···························································· check                │
│  ╵                                                                                               │
│                                                                                                  │
│                                                                                                  │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ [↑↓] nodo  [espacio] abrir gate  [v] log  [p] pausar  [r] rollback  [s] saltar gate  [q] salir   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
